<resources>
    <string name="app_name">Starter App</string>
    <string name="tiltle">Layout Sample App</string>
    <string name="bio_text">Layout Sample App Chrome OS devices,
        @\nnsuch as Chromebooks, now support the Google Play Store
        and Android apps. This article
    Layout Sample App Chrome OS devices,
        such as Chromebooks, now support the Google Play Store
        and Android apps. This article
        Layout Sample App Chrome OS devices,
        \n\n such as Chromebooks, now support the Google Play Store
        and Android apps. This article
        \n Layout Sample App Chrome OS devices,
        such as Chromebooks, now support the Google Play Store
        and Android apps. This article
        Layout Sample App Chrome OS devices,
        such as Chromebooks, now support the Google Play Store
        and Android apps. This article
        \n\nLayout Sample App Chrome OS devices,
        \n \n such as Chromebooks, now support the Google Play Store
        and Android apps. This article
        Layout Sample App Chrome OS devices,
        such as Chromebooks, now support the Google Play Store
        and Android apps. This article
        \nLayout Sample App Chrome OS devices,
        such as Chromebooks, now support the Google Play Store
        and Android apps. This article
        Layout Sample App Chrome OS devices,
        \nsuch as Chromebooks, now support the Google Play Store
        and Android apps. This article
        Layout Sample App Chrome OS devices,
        such as Chromebooks, now support the Google Play Store
        and Android apps. This article
    </string>
    <string name="button">Button</string>
    <string name="et_hint">Enter Your Name</string>
    <string name="box_one">Box One</string>
    <string name="Box_Two">Box Two</string>
    <!-- fragment  navigation Component-->


    <string name="hello_blank_fragment">Start Fragment</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="start">Start</string>
    <string name="hint_fragment_two">Send Text to Fragment Three</string>
    <string name="tv_hint_frag_two">Text from the fragment one</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box five</string>
    <string name="roll_btn_text">Roll</string>
    <string name="recycler_heading_sample_text">sample Text</string>
    <string name="recycler_dummy_text">sample Text for description sample Text for description sample Text for description \nDummay text for description</string>
    <string name="recycler_dummy_title_headingtxt">Sample Test Title Heading</string>

    // tip Calculator string
    <string name="service_cost_et_txt">Cost Of the Service</string>
    <string name="feed_tv_txt">How the Service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">Ok (15%)</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="tip_amount" formatted="false">Tip Amount :$ </string>
    <string name="label">Cost_Service</string>
</resources>