<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Extra.Layout_Activity">
    <data>
        <variable
            name="myNameClass"
            type="com.example.starterapp.data.MyName" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/choclate"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    >

    <TextView
        android:id="@+id/title_text"
        style="@style/Title_text"
        android:textColor="@color/lightChoclate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/tiltle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="@color/lightChoclate"
        style="@style/text_view_style"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:hint="@string/et_hint"
        android:text="@={myNameClass.etName}"
        android:padding="8dp"
        android:gravity="center_horizontal"
         />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Colored"

        />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@={myNameClass.tvName}"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/scroll_bio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/lightChoclate"
            android:text="@string/bio_text"
            android:textSize="18sp"

            />
    </ScrollView>

</LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>