<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Tip_Calculator.Tip_Calculator_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:paddingHorizontal="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/edt_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edt_layout"
            app:srcCompat="@drawable/edt_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/label"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_service_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:inputType="numberDecimal"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_feedService"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/tv_feedService"
            app:srcCompat="@drawable/radio_img" />

        <TextView
            android:id="@+id/tv_feedService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/feed_tv_txt"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edt_layout"
            app:layout_constraintTop_toBottomOf="@+id/edt_layout" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/tv_feedService">

            <RadioButton
                android:id="@+id/r_amazing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/amazing_20" />

            <RadioButton
                android:id="@+id/r_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/r_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/ok_15" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/arr_right"
            app:layout_constraintBottom_toBottomOf="@+id/switch_roundup"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/switch_roundup" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_roundup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:checked="true"
            android:layout_marginStart="15dp"
            android:paddingStart="8dp"
            android:text="@string/round_up_tip"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

        <Button
            android:id="@+id/tip_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black"
            android:text="Calculate Tip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/switch_roundup"
            app:layout_constraintTop_toBottomOf="@+id/switch_roundup" />

        <TextView
            android:id="@+id/Result_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            tools:text="Total tip amount:$"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip_calculate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>